@startuml ER Diagram - Full

title Entity Relationship Diagram - Đầy đủ tất cả bảng

entity Branches {
  * branch_id: INT <<PK>>
  --
  branch_code: VARCHAR(20) <<UK>>
  branch_name: VARCHAR(200)
  address: VARCHAR(500)
  phone: VARCHAR(20)
  email: VARCHAR(100)
  manager_id: INT <<FK>>
  status: ENUM
  created_at: TIMESTAMP
}

entity Roles {
  * role_id: INT <<PK>>
  --
  role_name: VARCHAR(50) <<UK>>
  description: VARCHAR(500)
  created_at: TIMESTAMP
}

entity Employees {
  * employee_id: INT <<PK>>
  --
  employee_code: VARCHAR(20) <<UK>>
  branch_id: INT <<FK>>
  role_id: INT <<FK>>
  full_name: VARCHAR(200)
  email: VARCHAR(100) <<UK>>
  phone: VARCHAR(20)
  username: VARCHAR(50) <<UK>>
  password_hash: VARCHAR(255)
  status: ENUM
  created_at: TIMESTAMP
}

entity Customers {
  * customer_id: INT <<PK>>
  --
  customer_code: VARCHAR(20) <<UK>>
  full_name: VARCHAR(200)
  email: VARCHAR(100) <<UK>>
  phone: VARCHAR(20) <<UK>>
  id_card_number: VARCHAR(20)
  date_of_birth: DATE
  gender: ENUM
  address: VARCHAR(500)
  occupation: VARCHAR(100)
  monthly_income: DECIMAL(18,2)
  registered_branch_id: INT <<FK>>
  username: VARCHAR(50) <<UK>>
  password_hash: VARCHAR(255)
  status: ENUM
  created_at: TIMESTAMP
}

entity CreditScores {
  * score_id: INT <<PK>>
  --
  customer_id: INT <<FK>>
  score: INT
  grade: ENUM
  calculated_at: TIMESTAMP
}

entity AccountTypes {
  * account_type_id: INT <<PK>>
  --
  type_code: VARCHAR(20) <<UK>>
  type_name: VARCHAR(100)
  description: VARCHAR(500)
  min_balance: DECIMAL(18,2)
  interest_rate: DECIMAL(5,2)
  status: ENUM
}

entity Accounts {
  * account_id: INT <<PK>>
  --
  account_number: VARCHAR(20) <<UK>>
  customer_id: INT <<FK>>
  account_type_id: INT <<FK>>
  branch_id: INT <<FK>>
  balance: DECIMAL(18,2)
  interest_rate: DECIMAL(5,2)
  opened_date: DATE
  status: ENUM
  created_at: TIMESTAMP
}

entity Cards {
  * card_id: INT <<PK>>
  --
  card_number: VARCHAR(255) <<UK>>
  account_id: INT <<FK>>
  card_type: ENUM
  issue_date: DATE
  expiry_date: DATE
  status: ENUM
  created_at: TIMESTAMP
}

entity TransactionTypes {
  * transaction_type_id: INT <<PK>>
  --
  type_code: VARCHAR(20) <<UK>>
  type_name: VARCHAR(100)
  description: VARCHAR(500)
}

entity Transactions {
  * transaction_id: BIGINT <<PK>>
  --
  transaction_code: VARCHAR(50) <<UK>>
  transaction_type_id: INT <<FK>>
  from_account_id: INT <<FK>>
  to_account_id: INT <<FK>>
  amount: DECIMAL(18,2)
  fee: DECIMAL(10,2)
  description: VARCHAR(500)
  balance_after: DECIMAL(18,2)
  status: ENUM
  transaction_date: TIMESTAMP
}

entity SavingsInterestRates {
  * rate_id: INT <<PK>>
  --
  term_months: INT
  min_amount: DECIMAL(18,2)
  max_amount: DECIMAL(18,2)
  interest_rate: DECIMAL(5,2)
  status: ENUM
  effective_from: DATE
  effective_to: DATE
}

entity SavingsDeposits {
  * deposit_id: INT <<PK>>
  --
  deposit_number: VARCHAR(20) <<UK>>
  customer_id: INT <<FK>>
  account_id: INT <<FK>>
  branch_id: INT <<FK>>
  principal_amount: DECIMAL(18,2)
  interest_rate_id: INT <<FK>>
  interest_rate: DECIMAL(5,2)
  term_months: INT
  start_date: DATE
  maturity_date: DATE
  auto_renew: ENUM
  total_interest_earned: DECIMAL(18,2)
  status: ENUM
  created_at: TIMESTAMP
}

entity SavingsTransactions {
  * savings_transaction_id: INT <<PK>>
  --
  deposit_id: INT <<FK>>
  transaction_type: ENUM
  amount: DECIMAL(18,2)
  interest_amount: DECIMAL(18,2)
  description: VARCHAR(500)
  transaction_date: TIMESTAMP
}

entity CollateralTypes {
  * collateral_type_id: INT <<PK>>
  --
  type_code: VARCHAR(20) <<UK>>
  type_name: VARCHAR(100)
  max_ltv: DECIMAL(5,2)
}

entity Collaterals {
  * collateral_id: INT <<PK>>
  --
  customer_id: INT <<FK>>
  collateral_type_id: INT <<FK>>
  collateral_name: VARCHAR(200)
  description: TEXT
  location: VARCHAR(500)
  certificate_number: VARCHAR(100)
  issue_date: DATE
  issue_authority: VARCHAR(200)
  original_value: DECIMAL(18,2)
  appraised_value: DECIMAL(18,2)
  appraised_by: INT <<FK>>
  appraised_date: DATE
  status: ENUM
  verification_notes: VARCHAR(1000)
  created_at: TIMESTAMP
}

entity LoanTypes {
  * loan_type_id: INT <<PK>>
  --
  type_code: VARCHAR(20) <<UK>>
  type_name: VARCHAR(100)
  description: VARCHAR(500)
  max_amount: DECIMAL(18,2)
  max_term_months: INT
  require_collateral: ENUM
}

entity LoanInterestRates {
  * rate_id: INT <<PK>>
  --
  loan_type_id: INT <<FK>>
  min_amount: DECIMAL(18,2)
  max_amount: DECIMAL(18,2)
  term_months_from: INT
  term_months_to: INT
  credit_grade: ENUM
  base_rate: DECIMAL(5,2)
  effective_from: DATE
  effective_to: DATE
  status: ENUM
}

entity Loans {
  * loan_id: INT <<PK>>
  --
  loan_number: VARCHAR(20) <<UK>>
  customer_id: INT <<FK>>
  account_id: INT <<FK>>
  loan_type_id: INT <<FK>>
  branch_id: INT <<FK>>
  loan_officer_id: INT <<FK>>
  loan_amount: DECIMAL(18,2)
  approved_amount: DECIMAL(18,2)
  interest_rate_id: INT <<FK>>
  interest_rate: DECIMAL(5,2)
  term_months: INT
  monthly_payment: DECIMAL(18,2)
  purpose: VARCHAR(500)
  collateral_id: INT <<FK>>
  collateral_value: DECIMAL(18,2)
  ltv_ratio: DECIMAL(5,2)
  outstanding_balance: DECIMAL(18,2)
  application_date: DATE
  approved_date: DATE
  approved_by: INT <<FK>>
  rejection_reason: VARCHAR(500)
  disbursement_date: DATE
  first_payment_date: DATE
  maturity_date: DATE
  status: ENUM
  created_at: TIMESTAMP
}

entity LoanPaymentSchedule {
  * schedule_id: INT <<PK>>
  --
  loan_id: INT <<FK>>
  payment_number: INT
  due_date: DATE
  principal_amount: DECIMAL(18,2)
  interest_amount: DECIMAL(18,2)
  total_payment: DECIMAL(18,2)
  outstanding_balance: DECIMAL(18,2)
  status: ENUM
  paid_amount: DECIMAL(18,2)
  paid_date: DATE
}

entity LoanPayments {
  * payment_id: INT <<PK>>
  --
  loan_id: INT <<FK>>
  schedule_id: INT <<FK>>
  transaction_id: BIGINT <<FK>>
  payment_date: TIMESTAMP
  principal_paid: DECIMAL(18,2)
  interest_paid: DECIMAL(18,2)
  late_fee_paid: DECIMAL(10,2)
  total_paid: DECIMAL(18,2)
  payment_method: ENUM
  reference_number: VARCHAR(100)
  notes: VARCHAR(500)
}

' ============================================
' RELATIONSHIPS
' ============================================

Branches ||--o{ Employees
Branches ||--o{ Customers
Branches ||--o{ Accounts
Branches ||--o{ SavingsDeposits
Branches ||--o{ Loans

Roles ||--o{ Employees

Customers ||--o{ Accounts
Customers ||--o| CreditScores
Customers ||--o{ Loans
Customers ||--o{ Collaterals
Customers ||--o{ SavingsDeposits

AccountTypes ||--o{ Accounts
Accounts ||--o{ Cards
Accounts ||--o{ Transactions
Accounts ||--o{ SavingsDeposits

TransactionTypes ||--o{ Transactions

SavingsInterestRates ||--o{ SavingsDeposits
SavingsDeposits ||--o{ SavingsTransactions

CollateralTypes ||--o{ Collaterals

LoanTypes ||--o{ Loans
LoanTypes ||--o{ LoanInterestRates
LoanInterestRates ||--o{ Loans
Loans ||--o{ LoanPaymentSchedule
Loans ||--o{ LoanPayments
Loans }o--o| Collaterals

Employees ||--o{ Loans : loan_officer
Employees ||--o{ Loans : approved_by
Employees ||--o{ Collaterals : appraises

@enduml

